# ACGPathTracing

./: AppConfig.cfg  CMakeLists.txt  CornellBoxWithMonkey.mtl  CornellBoxWithMonkey_lgscale.mtl  README.md  rebuild.bat
CMake/: FindOptiX.cmake
PathTracer_Optix/: AppConfig.cfg  AppController.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  GLFCallbacks.cpp  GLFCallbacks.h  OptixManager.cpp  OptixManager.h  PathTracerMain.cpp  TinyObjWrapper.cpp  TinyObjWrapper.h  common.h  pathTracer.h  pathTracerPrograms.cu
Report/: references.bib  report.tex
cuda/: helpers.h
